--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Velvet",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^3.5.9"
+    "mongodb": "^3.5.9",
+    "mongoose": "^5.10.0"
   }
 }
