--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec npm test"
   },
   "author": "Velvet",
   "license": "ISC",
@@ -13,5 +14,11 @@
     "express": "^4.17.1",
     "mongodb": "^3.5.9",
     "mongoose": "^5.10.0"
+  },
+  "devDependencies": {
+    "expect": "^26.4.2",
+    "mocha": "^8.1.1",
+    "nodemon": "^2.0.4",
+    "supertest": "^4.0.2"
   }
 }
